<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
     >
    <RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    	<ImageView 
android:layout_width="293dp" android:layout_height="121dp"
android:src="@drawable/boxsilverxmember" 
android:id="@+id/memberboxbg" android:contentDescription="@string/desc"/>
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/membernametitle"
  android:layout_marginLeft="10dip"
  android:layout_marginTop="10dip"
  android:text="@string/hisir"
  />
    	<ImageView 
android:layout_width="160dp" android:layout_height="1dp"
android:src="@drawable/lineinboxsilvermember" 
android:id="@+id/linememberboxbg" android:contentDescription="@string/desc"
android:layout_below="@+id/membernametitle"
android:layout_toRightOf="@+id/membernametitle"
android:layout_marginLeft="10dip"
/>
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/membernamesilverbox"
  android:layout_marginLeft="10dip"
  android:layout_marginTop="10dip"
  android:layout_toRightOf="@+id/membernametitle"
  />
    	
    	<ImageView 
android:layout_width="wrap_content" android:layout_height="wrap_content"
android:src="@drawable/checkquota" 
android:id="@+id/onefreeoneimage" android:contentDescription="@string/desc"
android:layout_below="@+id/linememberboxbg"
 android:layout_marginLeft="10dip"
  android:layout_marginTop="10dip"
/>
    	<TextView android:layout_width="80dip"
  android:layout_height="wrap_content"
  android:id="@+id/checkquota"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
  android:layout_toRightOf="@+id/onefreeoneimage"
  android:layout_below="@+id/linememberboxbg"
  android:text="@string/checkquota"
  />
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/checkquotadetail"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
  android:layout_toRightOf="@+id/onefreeoneimage"
  android:layout_below="@+id/checkquota"
  />
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/checkquotadetail2"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="5dip"
  android:layout_toRightOf="@+id/checkquotadetail"
  android:layout_below="@+id/checkquota"
  />
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/checkquotadetail5"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="5dip"
  android:layout_toRightOf="@+id/checkquotadetail2"
  android:layout_below="@+id/checkquota"
  />
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/checkquotadetail3"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
  android:layout_toRightOf="@+id/onefreeoneimage"
  android:layout_below="@+id/checkquotadetail"
  />
    	<TextView android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/checkquotadetail4"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="5dip"
  android:layout_toRightOf="@+id/checkquotadetail3"
  android:layout_below="@+id/checkquotadetail"
  />
    	
    	<ImageView 
android:layout_width="1dp" android:layout_height="59dp"
android:src="@drawable/lineartmember" 
android:id="@+id/lineartmember" android:contentDescription="@string/desc"
android:layout_below="@+id/linememberboxbg"
android:layout_toRightOf="@+id/checkquotadetail5"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
   android:gravity="center" 
/>
    	
    	<ImageView 
android:layout_width="27dp" android:layout_height="29dp"
android:src="@drawable/checkpoint" 
android:id="@+id/getpointimage" android:contentDescription="@string/desc"
android:layout_below="@+id/linememberboxbg"
android:layout_toRightOf="@+id/lineartmember"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
/>
    	<TextView android:layout_width="80dip"
  android:layout_height="wrap_content"
  android:id="@+id/checkpoint"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
  android:layout_toRightOf="@+id/getpointimage"
  android:layout_below="@+id/linememberboxbg"
  android:text="@string/checkpoint"
  />
    	<TextView android:layout_width="80dip"
  android:layout_height="wrap_content"
  android:id="@+id/checkpointdetail"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="10dip"
  android:layout_toRightOf="@+id/getpointimage"
  android:layout_below="@+id/checkpoint"
  />
    	
        </RelativeLayout>
	<ListView android:layout_height="150dip" 
     android:id="@+id/memberlistview" android:layout_width="fill_parent"
     android:divider="#FFCC00"
     android:layout_marginTop="30dip"
      android:cacheColorHint="@android:color/transparent"
     ></ListView>
</LinearLayout>